k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:

  name: taskflow-deployment

  namespace: taskflow


spec:

  replicas: 2


  selector:

    matchLabels:

      app: taskflow



  template:


    metadata:

      labels:

        app: taskflow



    spec:


      containers:


        - name: taskflow


          image: mtarunkumar/taskflow:latest


          imagePullPolicy: Always



          ports:


            - containerPort: 5000



          volumeMounts:


            - name: task-data

              mountPath: /app/data



          resources:


            requests:


              cpu: "100m"

              memory: "128Mi"



            limits:


              cpu: "500m"

              memory: "512Mi"



      volumes:


        - name: task-data


          persistentVolumeClaim:


            claimName: taskflow-pvc
