k8s/apply-all.yaml
apiVersion: v1
kind: Namespace

metadata:

  name: taskflow


---

apiVersion: apps/v1
kind: Deployment

metadata:

  name: taskflow-deployment

  namespace: taskflow


spec:

  replicas: 2


  selector:

    matchLabels:

      app: taskflow


  template:

    metadata:

      labels:

        app: taskflow


    spec:

      containers:

        - name: taskflow

          image: mtarunkumar/taskflow:latest

          imagePullPolicy: Always


          ports:

            - containerPort: 5000


          volumeMounts:

            - name: task-data

              mountPath: /app/data


      volumes:

        - name: task-data

          persistentVolumeClaim:

            claimName: taskflow-pvc


---

apiVersion: v1
kind: Service

metadata:

  name: taskflow-service

  namespace: taskflow


spec:

  type: NodePort


  selector:

    app: taskflow


  ports:

    - port: 5000

      targetPort: 5000

      nodePort: 30080
