k8s/dashboard-service.yaml

apiVersion: v1
kind: Service

metadata:

  name: taskflow-dashboard-service

  namespace: taskflow


spec:

  type: NodePort


  selector:

    app: taskflow


  ports:

    - port: 5000

      targetPort: 5000

      nodePort: 30090
