k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: taskflow-service
  namespace: taskflow


spec:

  selector:

    app: taskflow


  type: NodePort


  ports:

    - port: 5000

      targetPort: 5000

      nodePort: 30080
