k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress


metadata:

  name: taskflow-ingress

  namespace: taskflow


  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /



spec:


  ingressClassName: nginx


  rules:


    - host: taskflow.local


      http:


        paths:


          - path: /


            pathType: Prefix


            backend:


              service:


                name: taskflow-service


                port:


                  number: 5000
