k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:

  name: taskflow-network-policy

  namespace: taskflow


spec:

  podSelector:

    matchLabels:

      app: taskflow


  policyTypes:

    - Ingress

    - Egress


  ingress:


    - from:


        - namespaceSelector: {}


      ports:


        - protocol: TCP

          port: 5000



  egress:


    - to:


        - namespaceSelector: {}


      ports:


        - protocol: TCP

          port: 53


        - protocol: UDP

          port: 53
